<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
>
    <PreferenceCategory app:title="@string/messages_header">
        <EditTextPreference
            app:key="signature"
            app:title="@string/signature_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="reply"
            app:entries="@array/reply_entries"
            app:entryValues="@array/reply_values"
            app:key="reply"
            app:title="@string/reply_title"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory app:title="MQTT Settings">
        <EditTextPreference
            app:key="mqtt_broker"
            app:title="Broker URL"
            app:summary="Enter the MQTT broker URI (e.g. tcp://example.com:1883)"
            app:useSimpleSummaryProvider="false" />

        <EditTextPreference
            app:key="mqtt_username"
            app:title="MQTT Username"
            app:summary="Enter your MQTT username"
            app:useSimpleSummaryProvider="false" />

        <EditTextPreference
            app:key="mqtt_password"
            app:title="MQTT Password"
            app:summary="Enter your MQTT password"
            android:inputType="textPassword"
            app:useSimpleSummaryProvider="false" />
    </PreferenceCategory>

    <PreferenceCategory app:title="UvRVRV">
        <EditTextPreference
            app:key="vid_url"
            app:title="URL"
            app:summary="Enter the URL to the UvRVRV server"
            app:useSimpleSummaryProvider="false" />
    </PreferenceCategory>

</PreferenceScreen>